added buttons with images
fixed pixelated images, properly added transparency layer.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </div>
 
     <div class="content-main">
-        <div class="selector container" id="rock">
-
+        <div class="selector container" id="rock" alt="A hand depicting the shape of rock">
+            <img src="img/rock.png">
         </div>
-        <div class="selector container" id="paper">
-            
+        <div class="selector container" id="paper" alt="A hand depicting the shape of paper">
+            <img src="img/paper.png">
         </div>
-        <div class="selector container" id="scissors">
-            
+        <div class="selector container" id="scissors" alt="A hand depicting the shape of scissors">
+            <img src="img/scissors.png">
         </div>
     </div>
 
