--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Rock Paper Scissors</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="app.js" defer></script>
+
 </head>
 <body>
     <!-- background video for hyper overstylization -->
@@ -15,8 +17,6 @@
             <source src="img/bg.webm" type="video/webm">
         </video>
     </div>
-
-    <script src="app.js"></script>
 
     <!-- begin site content -->
     <div class="header container">
