added a pointless splash screen
i got bored and thought it would add to the overdone aesthetic

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </video>
     </div>
 
+    <!-- i cannot help myself, pointless splash screen incoming -->
+     <div class="splash">
+        <div class="play container">play now</div>
+     </div>
+
     <!-- begin site content -->
     <div class="header container">
         <span>rock paper scissors</span>
