finalized document tree, added computer icon

--- a/index.html
+++ b/index.html
@@ -40,5 +40,27 @@
         </div>
     </div>
 
+    <div class="computerSelection">
+
+    </div>
+
+    <div class="footer">
+        <div class="score-card">
+            <div class="playerScore score">
+                0
+            </div>
+            <div class="score-title">
+                your score
+            </div>     
+        </div>
+        <div class="score-card">
+            <div class="playerScore score">
+                0
+            </div>
+            <div class="score-title">
+                computer
+            </div>     
+        </div>
+    </div>
 </body>
 </html>
