changed class name of main content div

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span>rock paper scissors</span>
     </div>
 
-    <div class="content-main">
+    <div class="content">
         <div class="selector container" id="rock" alt="A hand depicting the shape of rock">
             <img src="img/rock.png">
         </div>
