--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="footer">
         <div class="score-card">
-            <div class="playerScore score">
+            <div class="score" id="playerScore">
                 0
             </div>
             <div class="score-title">
@@ -51,7 +51,7 @@
             </div>     
         </div>
         <div class="score-card">
-            <div class="playerScore score">
+            <div class="score" id="computerScore">
                 0
             </div>
             <div class="score-title">
