score increments, game flow finalized
win condition of 5 points will be implemented tomorrow

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </div>
     </div>
 
+    <pre class="resultText">
+        Placeholder text so there isn't\nan awkward jump on some screen sizes
+    </pre>
+
     <div class="footer">
         <div class="score-card">
             <div class="score" id="playerScore">
