organized code, barebones result screen function

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <pre class="resultText">
-        Placeholder text so there isn't\nan awkward jump on some screen sizes
+        ignore the placeholder text "RSIK"
     </pre>
 
     <div class="footer">
